--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,12 +16,13 @@ jobs:
       - name: 'Build'
         run: |
           export GOTOOLCHAIN=go1.20
+          export CGO_CFLAGS="$CGO_CFLAGS -I$(pwd)/vm_libvix/include"
           export CGO_LDFLAGS="$CGO_LDFLAGS -L$(pwd)/vm_libvix/libs/linux64 -lvixAllProducts -ldl -lpthread"
           export BUILD_DATETIME=$(date +%Y-%m-%d %T)
           export BUILD_GIT_TAG=$(git tag)
           mkdir prebuilt
           go env
-          CGO_CFLAGS="$CGO_CFLAGS -I$(pwd)/vm_libvix/include" go build -ldflags "-X 'main.dateTime=`$BUILD_DATETIME`' -X 'main.gitTag=`$BUILD_GIT_TAG`' " -o prebuilt/openvm-api cmd/server/main.go
+          go build -ldflags "-X 'main.dateTime=`$BUILD_DATETIME`' -X 'main.gitTag=`$BUILD_GIT_TAG`' " -o prebuilt/openvm-api cmd/server/main.go
 
       - name: 'Copy RUNTIME'
         run: |
@@ -63,12 +64,13 @@ jobs:
       - name: 'Build'
         run: |
           export GOTOOLCHAIN=go1.20
+          export CGO_CFLAGS="$CGO_CFLAGS -I$(pwd)/vm_libvix/include"
           export CGO_LDFLAGS="$CGO_LDFLAGS -I$(pwd)/vm_libvix/include" CGO_LDFLAGS="-L$(pwd)/vm_libvix/libs/win64 -lvixAllProducts -lpthread"
           export BUILD_DATETIME=$(date +%Y-%m-%d %T)
           export BUILD_GIT_TAG=$(git tag)
           mkdir prebuilt
           go env
-          CGO_CFLAGS="$CGO_CFLAGS -I$(pwd)/vm_libvix/include"  go build -ldflags "-X 'main.dateTime=`$BUILD_DATETIME`' -X 'main.gitTag=`$BUILD_GIT_TAG`' " -o prebuilt/openvm-api.exe cmd/server/main.go
+          go build -ldflags "-X 'main.dateTime=`$BUILD_DATETIME`' -X 'main.gitTag=`$BUILD_GIT_TAG`' " -o prebuilt/openvm-api.exe cmd/server/main.go
 
       - name: 'Copy RUNTIME'
         run: |
