--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,8 +41,9 @@ jobs:
       - name: 'Copy RUNTIME'
         run: |
           # prebuilt/start.sh
-          echo "#!/bin/bash" > prebuilt/start.sh
-          echo "LD_LIBRARY_PATH=\$(pwd) \$(pwd)/openvm-api" >> prebuilt/start.sh
+          echo '#!/bin/bash' > prebuilt/start.sh
+          echo 'SCRIPT_DIR=$(dirname "$(readlink -f "$0")")' >> prebuilt/start.sh
+          echo 'LD_LIBRARY_PATH=$SCRIPT_DIR $SCRIPT_DIR/openvm-api' >> prebuilt/start.sh
           chmod +x prebuilt/start.sh
           # prebuilt/libvixAllProducts.so
           cp $(pwd)/vm_libvix/libs/linux64/libvixAllProducts.so prebuilt/
